--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "url": "git://github.com/netai/x-image-processing.git"
   },
   "keywords": [
-	"image upload"
+	"image upload",
     "graphics",
     "magick",
     "image",
